Added HTML Body and structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,38 @@
     <title>Vanilla Weather App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="weather-app-wrapper">
+        <h1>City Name</h1>
+        <ul>
+          <li>Weather</li>
+          <li>Date and Time</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            15°C | °F
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+              alt="cloudy"
+            />
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Humidity</li>
+              <li>Wind</li>
+              <li>Precipitation</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/melindalegg/vanilla-weather-app"
+          target="_blank"
+          >Open-source code</a
+        >, by Melinda Legg
+      </small>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
