Styled main elements of page
CSS - added google font unbounded, cursive and weather-border

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Calistoga&family=Rubik+Vinyl&family=Unbounded:wght@200;300;400;500;600;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Vanilla Weather App</title>
   </head>
   <body>
     <div class="container">
-      <div class="weather-app-wrapper">
+      <div class="weather-app">
         <h1>City Name</h1>
         <ul>
-          <li>Weather</li>
           <li>Date and Time</li>
+          <li>Weather</li>
         </ul>
         <div class="row">
           <div class="col-6">
@@ -37,14 +43,14 @@
             </ul>
           </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/melindalegg/vanilla-weather-app"
+            target="_blank"
+            >Open-source code</a
+          >, by Melinda Legg
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/melindalegg/vanilla-weather-app"
-          target="_blank"
-          >Open-source code</a
-        >, by Melinda Legg
-      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
