--- a/index.html
+++ b/index.html
@@ -21,26 +21,28 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>City Name</h1>
-        <ul>
-          <li>Date and Time</li>
-          <li>Weather</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            15°C | °F
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-              alt="cloudy"
-            />
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Humidity</li>
-              <li>Wind</li>
-              <li>Precipitation</li>
-            </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <h1>City Name</h1>
+          <ul>
+            <li>Date and Time</li>
+            <li>Weather</li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              15°C | °F
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+                alt="cloudy"
+              />
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity</li>
+                <li>Wind</li>
+                <li>Precipitation</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
