--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="weather-app">
           <div class="overview">
             <h1 id="city"></h1>
-            <ul>
-              <li id="date-time"></li>
+            <ul id="date-description">
+              <li id="date"></li>
               <li id="description"></li>
             </ul>
           </div>
