added weather icon

--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
               <div class="d-flex weather-temperature">
                 <span class="current-temperature" id="temperature">15</span>
                 <span class="units"> °C | <a href="#">°F</a></span>
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                  alt="cloudy"
-                />
+                <img src="" alt="" id="icon" />
               </div>
             </div>
             <div class="col-6">
