added content to alt and src for icon

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="d-flex weather-temperature">
                 <span class="current-temperature" id="temperature">15</span>
                 <span class="units"> °C | <a href="#">°F</a></span>
-                <img src="" alt="" id="icon" />
+                <img src=".." alt="clear" id="icon" />
               </div>
             </div>
             <div class="col-6">
