Added conversion from farenheit to celsius
Add event listener and conversion for farenheit and celsius.
Creating the link to active when click from one another.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
             <div class="col-6">
               <div class="d-flex weather-temperature">
                 <span class="current-temperature" id="temperature">15</span>
-                <span class="units"> °C | <a href="#">°F</a></span>
+                <span class="units">
+                  <a href="#" id="celsius-link" class="active"> °C </a>|
+                  <a href="#" id="farenheit-link">°F</a></span
+                >
                 <img src=".." alt="clear" id="icon" />
               </div>
             </div>
