--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="overview">
             <h1 id="city"></h1>
             <ul id="date-description">
-              <li id="date"></li>
+              <li>Last updated on: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
           </div>
