--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
+          <div class="weather-forecast" id="forecast">
             <div class="row">
               <div class="col-2">
-                <div class="weather-forecast-date">Mon</div>
+                <div class="weather-forecast-date">Fri</div>
                 <img
                   src="https://openweathermap.org/img/wn/10d@2x.png"
                   alt=""
