--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
             <div class="col-6">
               <div class="d-flex weather-temperature">
                 <span class="current-temperature" id="temperature">15</span>
-                <span class="units">
-                  <a href="#" id="celsius-link" class="active"> °C </a>|
-                  <a href="#" id="farenheit-link">°F</a></span
-                >
+                <span class="units"> °C </span>
                 <img src=".." alt="clear" id="icon" />
               </div>
             </div>
