--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/95402f3487.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Vanilla Weather App</title>
   </head>
   <body>
@@ -26,7 +30,7 @@
         <div class="weather-app">
           <form id="search-form" class="mb-3">
             <div class="row">
-              <div class="col-9">
+              <div class="col-8">
                 <input
                   type="search"
                   placeholder="Type a city..."
@@ -34,6 +38,14 @@
                   id="city-search"
                 />
               </div>
+              <button
+                type="button"
+                class="btn btn-success"
+                id="#current-location-button"
+              >
+                <i class="fa-solid fa-location-crosshairs"></i>
+              </button>
+
               <div class="col-3">
                 <input
                   type="submit"
