Fixed current location JS!!
Fixed current location to search in JS and html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <button
                 type="button"
                 class="btn btn-success"
-                id="#current-location-button"
+                id="current-location-button"
               >
                 <i class="fa-solid fa-location-crosshairs"></i>
               </button>
