Background image/author centralised and wrapper hover
Added background image and a hover over the container. Transparent when not hovering over to full opacity when hovering.
Also moved author central to page.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                   type="submit"
                   value="Search"
                   class="btn btn-primary w-100"
+                  id="search-button"
                 />
               </div>
             </div>
@@ -94,7 +95,7 @@
             </div>
           </div>
         </div>
-        <small>
+        <small class="author">
           <a
             href="https://github.com/melindalegg/vanilla-weather-app"
             target="_blank"
