Ease in and out transition/wrapper colour change and loading icon
Added loading image so doesn't look as bad when starting up with that undefined image.
Also change wrapper background colour with ease-in-out hover, transition

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
               <div class="d-flex weather-temperature">
                 <span class="current-temperature" id="temperature">15</span>
                 <span class="units"> °C </span>
-                <img src=".." alt="clear" id="icon" />
+                <img src="src/images/loading.png" alt="" id="icon" />
               </div>
             </div>
             <div class="col-6">
-              <ul>
+              <ul class="conditions">
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span>km/h</li>
               </ul>
